@@ -19,6 +19,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 #include <stdio.h>
 #include <setjmp.h>
 #include <string.h>
+#include "sdas.h"
 #include "asxxxx.h"
 
 /*)Module	assubr.c
